# AITH-Blockchain-AI

./: README.md  pyproject.toml
notebooks/: classic_models.ipynb  eda.ipynb  final_comparison.ipynb  models.ipynb
ui/: app.py
